--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -12,6 +12,8 @@ bind -n M-Right send-key M-f
 ### DESIGN ###
 ##############
 
+set -g default-terminal "screen-256color"
+
 #### COLOUR (Solarized dark)
 
 # default statusbar colors
