minor shortcut changes

--- a/config/k9s_hotkey.yml
+++ b/config/k9s_hotkey.yml
@@ -25,6 +25,11 @@ hotKey:
     description: CiliumnNetworkPolicy
     command:     cnp
 
+  shift-6:
+    shortCut:    Shift-6
+    description: HelmRelease
+    command:     helm.fluxcd.io/v1/helmreleases
+
   # navigation
   shift-0:
     shortCut:    Shift-0
